# Robot_Programming

./: .gitignore  README.md  ground_truths.txt  requirements.txt  useful_commands.txt
config/: settings.yaml
darknet_ros/darknet_ros/config/: ros.yaml
darknet_ros/darknet_ros/launch/: darknet_ros.launch.py
darknet_ros/install/: local_setup.sh  setup.sh
darknet_ros/log/: latest_build
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build  latest_list
maps/: assignment_map.pgm  assignment_map.yaml  assignment_map2.pgm  assignment_map2.yaml
shell/: detect.sh  gazebo.sh  gazebo_simple.sh  get_transform.sh  ground_truth.sh  map.sh  map_simple.sh  nav.sh  nav_and_detect.sh  nav_to_pose.sh  rviz2.sh
src/cpp_nodes/: CMakeLists.txt  package.xml
src/cpp_nodes/src/: get_transform.cpp
src/pothole_finder/: setup.cfg  setup.py
src/pothole_finder/pothole_finder/: count_potholes.py  find_pothole.py  image_projection.py  map_potholes.py  mask_potholes.py  nav_to_pose.py  navigate.py  navigator.py  pothole_counter.py  waypoint_follower.py
src/pothole_finder_hard/: package.xml  setup.cfg  setup.py
src/pothole_finder_hard/pothole_finder_hard/: collect_data.py  detect_potholes.py  map_potholes.py  nav_and_detect.py  navigate.py  publish_ground_truth.py  train_model.py
src/pothole_finder_hard/yolo/: data.yaml
src/uol_cmp9767_tutorial/: setup.py
src/uol_cmp9767_tutorial/uol_cmp9767_tutorial/: image_projection_1.py  image_projection_2.py  image_projection_3.py  mover.py  mover_with_pose.py  opencv_test.py  tf_listener.py
(+319 files in other folders)
